# full-stack-quant-platform

./: .gitignore  README.md  agents.md  app.py  main.py  pyproject.toml  run.bat  test_slc.py
data/: 600519_daily.parquet  US_TSLA_daily.parquet
utils/: data_loader.py
