[project]
name = "full-stack-quant-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.30",
    "duckdb>=1.4.4",
    "lightweight-charts>=2.1",
    "pandas>=2.3.3",
    "streamlit>=1.54.0",
    "yfinance>=1.2.0",
]


[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
